Fix some of minor bugs discovered by FindBugs
git-svn-id: https://svn.apache.org/repos/asf/tuscany/sca-java-2.x/trunk@908643 13f79535-47bb-0310-9956-ffa450edef68